--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Hi</h1>
     <h2>Here you can see other projects</h2>
-    <a href="/order-summery">Front</a>
+    <a href="/order-summary/index.html">Front</a>
 </body>
 
 </html>
