--- a/public/advice-generator-app/index.html
+++ b/public/advice-generator-app/index.html
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-    <h1>Hi</h1>
-    <h2>Here you can see other projects</h2>
-    <a href="/order-summary/index.html">order-summary</a>
-    <a href="/advice-generator-app/index.html">advice-generator-app</a>
+    <h1>Advice</h1>
 </body>
 
 </html>
