--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 <body>
     <h1>Hi</h1>
     <h2>Here you can see other projects</h2>
-    <a href="/order-summary/index.html">order-summary</a>
-    <a href="/advice-generator-app/index.html">advice-generator-app</a>
+    <a href="/order-summary/index.html" target="_blank">order-summary</a>
+    <a href="/advice-generator-app/index.html" target="_blank">advice-generator-app</a>
 </body>
 
 </html>
