--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./dist/style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>Hi</h1>
-    <h2>Here you can see other projects</h2>
-    <a href="/order-summary/index.html" target="_blank">order-summary</a>
-    <a href="/advice-generator-app/index.html" target="_blank">advice-generator-app</a>
+
+    <div class="main">
+        <div class="main__header">
+            <h1>Frontend mentor</h1>
+            <h2>Challenges</h2>
+        </div>
+
+        <div class="main__descriptoin">
+            <h2>Welcome!</h2>
+            <p>These projects are taken as a challenge from the <a
+                    href="https://www.frontendmentor.io/challenges">Fronted
+                    Mentor</a> website.
+                In each of them, I learned something new that I had not encountered before or improved the knowledge
+                that I
+                already had.
+            </p>
+        </div>
+
+        <div class="main__projects">
+            <div class="main__projects--project">
+                <a href="/order-summary/index.html" target="_blank">
+                    <h2>Order summary</h2>
+                    <h3>HTML, SCSS</h3>
+                    <img src="./images/1__mobile.jpg" alt="" />
+                    <p>text</p>
+                    <a class="main__projects--project__git"
+                        href="https://github.com/RuKatya/frontend-chakkenges-projects/tree/main/public/order-summary">Github</a>
+                </a>
+            </div>
+            <div class="main__projects--project">
+                <a href="/advice-generator-app/index.html" target="_blank">
+                    <h2>Advice generator app</h2>
+                    <h3>HTML, SCSS, JS, API</h3>
+                    <img src="./images/2__mobile.jpg" alt="">
+                    <p>text</p>
+                    <a class="main__projects--project__git"
+                        href="https://github.com/RuKatya/frontend-chakkenges-projects/tree/main/public/advice-generator-app">Github</a>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <footer>Created by <a href="https://www.linkedin.com/in/katya-rukosuev/">Katya Ru</a></footer>
+    <script src="./index.js"></script>
 </body>
 
 </html>
