--- a/public/order-summary/index.html
+++ b/public/order-summary/index.html
@@ -49,7 +49,7 @@
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Katya Ru</a>.
+      Coded by <a href="https://www.linkedin.com/in/katya-rukosuev/">Katya Ru</a>.
     </div>
   </div>
 </body>
