--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="./dist/style.css">
-    <title>Document</title>
+    <title>Challenges</title>
 </head>
 
 <body>
@@ -25,6 +26,9 @@
                 In each of them, I learned something new that I had not encountered before or improved the knowledge
                 that I
                 already had.
+
+                <a href="https://www.frontendmentor.io/challenges">Fronted
+                    Mentor</a> challenges help improve coding skills by building realistic projects.
             </p>
         </div>
 
@@ -34,7 +38,8 @@
                     <h2>Order summary</h2>
                     <h3>HTML, SCSS</h3>
                     <img src="./images/1__mobile.jpg" alt="" />
-                    <p>text</p>
+                    <p>A solution to the Order summary card challenge. This project is my first experiment with
+                        a similar task. I tried to create a component as close as possible to the design</p>
                     <a class="main__projects--project__git"
                         href="https://github.com/RuKatya/frontend-chakkenges-projects/tree/main/public/order-summary">Github</a>
                 </a>
@@ -44,7 +49,8 @@
                     <h2>Advice generator app</h2>
                     <h3>HTML, SCSS, JS, API</h3>
                     <img src="./images/2__mobile.jpg" alt="">
-                    <p>text</p>
+                    <p>A solution to the Advice generator app challenge on Frontend Mentor.In this project, I practiced
+                        requesting data from the API and displaying it on the page.</p>
                     <a class="main__projects--project__git"
                         href="https://github.com/RuKatya/frontend-chakkenges-projects/tree/main/public/advice-generator-app">Github</a>
                 </a>
