--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
                     <img src="./images/1__mobile.jpg" alt="" />
                     <p>A solution to the Order summary card challenge. This project is my first experiment with
                         a similar task. I tried to create a component as close as possible to the design</p>
-                    <a class="main__projects--project__git"
+                    <a class="main__projects--project__git" target="_blank"
                         href="https://github.com/RuKatya/frontend-chakkenges-projects/tree/main/public/order-summary">Github</a>
                 </a>
             </div>
@@ -51,7 +51,7 @@
                     <img src="./images/2__mobile.jpg" alt="">
                     <p>A solution to the Advice generator app challenge on Frontend Mentor.In this project, I practiced
                         requesting data from the API and displaying it on the page.</p>
-                    <a class="main__projects--project__git"
+                    <a class="main__projects--project__git" target="_blank"
                         href="https://github.com/RuKatya/frontend-chakkenges-projects/tree/main/public/advice-generator-app">Github</a>
                 </a>
             </div>
