--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
         </div>
     </div>
 
+    <a href="/priview-card/build/index.html">aaa</a>
     <footer>Created by <a href="https://www.linkedin.com/in/katya-rukosuev/">Katya Ru</a></footer>
     <script src="./index.js"></script>
 </body>
